2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* gui/e-meeting-store.c: (start_async_read), (freebusy_async),
	(async_read): Read data with gio, not with gnome-vfs.
	* gui/e-meeting-store.c: (async_close): Function removed.
	* gui/migration.c:
	* gui/e-memos.c:
	* gui/alarm-notify/notify-main.c:
	* gui/e-tasks.c:
	* gui/main.c:
	* gui/e-meeting-list-view.c:
	Do not include gnome-vfs.
	* gui/dialogs/comp-editor.c: (set_attachment_list):
	* gui/dialogs/comp-editor.c: (attachment_guess_mime_type):
	Function removed, use e-util function instead.
	* gui/e-cal-popup.c: (temp_save_part):
	Reflect changes in CamelStreamVFS.
	* gui/e-cal-popup.c: (ecalp_apps_open_in), (ecalp_apps_popup_free),
	(ecalp_standard_menu_factory): Use gio to fill popup and launch app.
	* gui/e-cal-component-preview.h: (e_cal_comp_preview_url_requested_cb):
	* gui/e-cal-component-preview.c: (e_cal_comp_preview_url_requested_cb):
	New helper function to manage file:// urls for GtkHTML component.
	* gui/e-cal-component-preview.c: (e_cal_component_preview_init):
	* gui/e-cal-component-memo-preview.c:
	(e_cal_comp_preview_url_requested_cb):
	Use above helper function.
	* gui/e-cal-component-memo-preview.c: (url_requested_cb):
	* gui/e-cal-component-preview.c: (url_requested_cb): Function removed.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #523402

	* gui/e-calendar-view.c: (e_calendar_view_add_event):
	Do not free value returned by icaltimezone_get_tzid.

2008-04-16  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #232594

	* gui/e-meeting-list-view.c: (attendee_edited_cb):
	Set status to Needs Action when attendee's address have been changed.

2008-04-11  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #517134

	* gui/dialogs/comp-editor.c: (add_to_bar),
	(menu_insert_attachment_cb), (menu_insert_attach_recent_docs_cb),
	(comp_editor_init): Code re-factoring. Extend the 'Insert' menu to
	show a "Recent Documents" submenu (to quickly add them as