@@ -1,3 +1,15 @@
+2008-04-18  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #509923
+
+	* gui/dialogs/comp-editor.c: (real_send_comp):
+	* gui/e-calendar-view.c: (e_calendar_view_modify_and_send):
+	* gui/e-cal-model-calendar.c: (ecmc_set_value_at):
+	Send changes based on the user's choice of "all instances" or
+	"only this instance" for recurring events.
+	* gui/e-cal-model-calendar.c: (ecmc_set_value_at):
+	Also modify objects based on the user's choice.
+
 2008-04-17  Milan Crha  <mcrha@redhat.com>
 
 	** Part of fix for bug #526739
